2001-06-19 John R. Jackson <jrj@purdue.edu>

	* server-src/amtape.c: Document "slot advance" in the help output.

2001-06-19 John R. Jackson <jrj@purdue.edu>

	* server-src/amindexd.c: Minor gethostbyaddr() argument change to be
	  consistent with other Amanda usage.

2001-06-19 John R. Jackson <jrj@purdue.edu>

	* server-src/amverify.sh.in: Better cross platform tar detection.

2001-06-19 John R. Jackson <jrj@purdue.edu>

	* server-src/amverify.sh.in: More of the vrestore vs. 'b' flag change.

2001-06-19 John R. Jackson <jrj@purdue.edu>

	* recover-src/amrecover.c: Add more debugging to guess_disk()
	  function to better track how the disk is determined from the
	  current working directory.  Report current working directory in
	  error message.  Change "Trying" to "Trying disk" to distinguish
	  this from host attempts.
	* recover-src/set_commands.c: Remove redundant amfree() call.  Remove
	  redundant "OISD /" exchange.  Change "Trying" to "Trying host" to
	  distinguish this from disk attempts.

2001-06-18 John R. Jackson <jrj@purdue.edu>

	* recover-src/extract_list.c: Do not pass a 'b' (blocking) factor
	  flag to vrestore.  Some versions do not like it.

2001-06-18 John R. Jackson <jrj@purdue.edu>

	* common-src/dgram.c: Use a sin_addr arg to inet_ntoa() like all the
	  other Amanda code.
	* common-src/stream.c: Ditto.

2001-06-18 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-manual.sh.in: Add yet another online regex.  Found
	  by George Herson <gherson@snet.net>.

2001-06-01 John R. Jackson <jrj@purdue.edu>

	* server-src/amindexd.c (build_disk_table): Make sure a holding disk
	  image is used rather than a copy also on tape, if both exist.

2001-05-29 John R. Jackson <jrj@purdue.edu>

	* server-src/reporter.c: Fix PostScript output to only show what went
	  on the tape, not what the total amount dumped.  Compliments of
	  Joshua Baker-LePain <jlb17@duke.edu>.

2001-05-18 John R. Jackson <jrj@purdue.edu>
